[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scenes/running_animation.tres" type="Animation" id=1]
[ext_resource path="res://Scripts/player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/score.gd" type="Script" id=3]
[ext_resource path="res://Sprites/metalfrog_master_sheet.png" type="Texture" id=4]
[ext_resource path="res://Scenes/shooting_animation.tres" type="Animation" id=5]
[ext_resource path="res://Scenes/idle_animation.tres" type="Animation" id=6]
[ext_resource path="res://Scenes/Diag_Shooting.tres" type="Animation" id=7]
[ext_resource path="res://Scenes/Diag_Running.tres" type="Animation" id=8]
[ext_resource path="res://Scenes/Up.tres" type="Animation" id=9]
[ext_resource path="res://Scenes/Diag.tres" type="Animation" id=10]
[ext_resource path="res://Scenes/Diag_Runniong_Shooting.tres" type="Animation" id=11]
[ext_resource path="res://down_diag_running_shooting.tres" type="Animation" id=12]
[ext_resource path="res://down_diag_running.tres" type="Animation" id=13]
[ext_resource path="res://down_diag_shooting.tres" type="Animation" id=14]
[ext_resource path="res://down_diag.tres" type="Animation" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.2202, 91.3588 )

[sub_resource type="Animation" id=2]
resource_name = "Up_Running"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 19, 20 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Up_Running_Shooting"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26 ]
}

[sub_resource type="Animation" id=4]
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 19, 22, 21 ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 9
collision_mask = 9
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 71.7815, 65.2281 )
scale = Vector2( 1.5, 1.91055 )
texture = ExtResource( 4 )
vframes = 13
hframes = 3
frame = 38

[node name="Shoot" type="Position2D" parent="Sprite"]
position = Vector2( 20.2626, -28.0276 )

[node name="Shoot2" type="Position2D" parent="Sprite"]
position = Vector2( 26.4227, -42.8357 )

[node name="Shoot_diag" type="Position2D" parent="Sprite"]
position = Vector2( 17.8441, -32.9315 )

[node name="Camera2D" type="Camera2D" parent="Sprite"]
position = Vector2( 25.7216, 29.5656 )
scale = Vector2( 0.666667, 0.523409 )
current = true
limit_left = 0
limit_top = 0
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="HBoxContainer" parent="Sprite/Camera2D"]
visible = false
margin_left = -78.6899
margin_top = -182.051
margin_right = -15.6899
margin_bottom = -153.051
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Sprite/Camera2D/UI"]
margin_top = 7.0
margin_bottom = 21.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shoot_up" type="Position2D" parent="Sprite"]
position = Vector2( -4.83203, -64.6854 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 68.4608, 64.7741 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 58.7724, 66.1701 )
scale = Vector2( 2.74717, 9.26003 )
__meta__ = {
"_edit_lock_": true
}

[node name="Animation" type="AnimationPlayer" parent="."]
anims/Diag = ExtResource( 10 )
anims/Diag_Running = ExtResource( 8 )
anims/Diag_Running_Shooting = ExtResource( 11 )
anims/Diag_Shooting = ExtResource( 7 )
anims/Idle = ExtResource( 6 )
anims/Running = ExtResource( 1 )
anims/Shooting = ExtResource( 5 )
anims/Up = ExtResource( 9 )
anims/Up_Running = SubResource( 2 )
anims/Up_Running_Shooting = SubResource( 3 )
anims/Up_Shooting = SubResource( 4 )
anims/down_diag = ExtResource( 15 )
anims/down_diag_running = ExtResource( 13 )
anims/down_diag_running_shooting = ExtResource( 12 )
anims/down_diag_shooting = ExtResource( 14 )
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
